# DevPluseRepo

./: .env.example  .gitignore  FEATURES.md  Hackathon-Token-Optimisation-Plan.md  Jira issue sample.txt  README.md  Token-Optimizer.md  ab_dashboard.html  pyproject.toml  requirements.txt  run.bat  sample_document.docx
.claude/: settings.json  settings.local.json
.claude/skills/codebase-anchor-router/: SKILL.md
.claude/skills/prd-compressor/: SKILL.md
docs/: CHANGELOG.md  FEATURES.md  Hackcelerate-Token-Optimisation-Plan.md  INSTRUCTIONS.md  Prompts-Used.md  TokenOptimizer-Hackcelerate.pptx
docs/diagrams/: 01-system-overview.puml  02-document-optimize.puml  03-optimized-runner.puml  04-automations.puml  05-skills.puml  06-ab-validation.puml  07-end-to-end-dataflow.puml
scripts/: generate_architecture_pdf.py  generate_demo_video.py  generate_docs_pdf.py  generate_hackcelerate_ppt.py
skills/codebase_anchoring/: SKILL.md  anchor.py  test_codebase_anchoring.py
skills/model_routing/: SKILL.md  __init__.py  classifier.py  test_model_routing.py
skills/prd_compression/: SKILL.md  compressor.py  test_prd_compression.py
src/token_optimizer/: __init__.py  cli.py  config.py  run_log.py  ui.py
src/token_optimizer/anchor/: __init__.py  indexer.py
src/token_optimizer/automations/: __init__.py  github.py  triage.py
src/token_optimizer/core/: __init__.py
src/token_optimizer/eval/: ab_runner.py  cost.py  dashboard.py  datasets.py  quality_rubric.py
src/token_optimizer/optimize/: local.py  (+8 more)
tests/: test_hackathon.py  test_hackcelerate.py  test_optimize.py  tst.txt
(+25 files in other folders)
