[project]
name = "token-optimizer"
version = "0.1.0"
description = "Token-optimized Claude automation for JIRA and DevOps tools"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
# Real BPE token counting offline. Falls back to a heuristic if not installed.
tokenize = ["tiktoken>=0.7.0"]
# Generate the documentation PDFs and the pitch deck (scripts/generate_*).
docs = ["reportlab>=4.0", "python-pptx>=1.0"]

[project.scripts]
tokenopt = "token_optimizer.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Two source roots: the core package under src/, and the independently-maintained
# skill plugins under skills/ (each a self-contained package with code + SKILL.md
# + tests). Both are importable after `pip install -e .`.
[tool.setuptools.packages.find]
where = ["src", "skills"]

[tool.pytest.ini_options]
testpaths = ["tests", "skills"]
addopts = "--import-mode=importlib"
